tests/rosetta/out/Haskell/bitmap.error
run error: exit status 1

/workspace/mochi/tests/rosetta/out/Haskell/bitmap.hs:121:5: error:
    parse error on input ‘R’
    |
121 |     R :: Int,
    |     ^
